# rumoca_parol

./: Cargo.toml  build.rs  modelica.par
src/: main.rs  modelica_grammar.rs
src/ir/: ast.rs  flatten.rs  visitor.rs
tests/models/: package.mo  scoping.mo
tests/notebooks/: scoping.ipynb
