[package]
name = "rumoca"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
indexmap = "2.7.1"
parol = "2.2.0"
parol_runtime = "2.2.0"
thiserror = "1.0"

[build-dependencies]
parol = "2.2.0"
parol_runtime = "2.2.0"

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
